--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ a{
     text-decoration: none;
 }
 body{
-    background: rgba(0, 0, 0, 0.36);
+     background: rgb(255, 255, 255);
      font-family: 'Montserrat',sans-serif;
 }
 .container{
@@ -255,7 +255,6 @@ body{
     justify-content: space-between;
 }
 .card{
-
     border-radius: 20px;
     width: 250px;
     height: 487px;
@@ -441,6 +440,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 .input-tittle{
     padding: 40px ;
@@ -450,6 +450,9 @@ body{
     color: #2A2D46;
 
 
+}
+.card5{
+    margin: 20px;
 }
 
 .input-three {
